# disease_modeling_MLOS2

./: .gitignore  GPM_nc.json  LICENSE  NDVI_nc.json  README.md  environment.yml  preprocess.py  requirements.txt  visualize.py
Configs/: GLDAS_config.json  GLDAS_nc.json  GPM_config.json  GPM_nc.json  NDVI_config.json  POP_DEN_config.json  disease_config.json
Data/Datasets/: aligned_2021.csv  aligned_2021.npy  sri_lanka_2013-2022_shifted.npy  sri_lanka_2013-2022_vertical.csv
Data/Disease/: srilanka2021.csv
Data/GLDAS/: GLDAS_NOAH025_3H.A20070101.0000.021.nc4  GLDAS_NOAH025_3H.A20210101.0000.021.nc4  GLDAS_NOAH025_3H.A20210101.0300.021.nc4  GLDAS_NOAH025_3H.A20210101.0600.021.nc4  GLDAS_NOAH025_3H.A20210101.0900.021.nc4  GLDAS_NOAH025_3H.A20210101.1200.021.nc4  GLDAS_NOAH025_3H.A20210101.1500.021.nc4  GLDAS_NOAH025_3H.A20210101.1800.021.nc4  GLDAS_NOAH025_3H.A20210101.2100.021.nc4  GLDAS_NOAH025_3H.A20210102.0000.021.nc4  GLDAS_NOAH025_3H.A20210102.0300.021.nc4  GLDAS_NOAH025_3H.A20210102.0600.021.nc4  GLDAS_NOAH025_3H.A20210102.0900.021.nc4  GLDAS_NOAH025_3H.A20210102.1200.021.nc4  GLDAS_NOAH025_3H.A20210102.1500.021.nc4  GLDAS_NOAH025_3H.A20210102.1800.021.nc4  GLDAS_NOAH025_3H.A20210102.2100.021.nc4  GLDAS_NOAH025_3H.A20210103.0000.021.nc4  (+47 more)
MLOSSP/: README.md  pyproject.toml
MLOSSP/src/mlossp/: __init__.py  converter.py  dataloader.py  formatters.py  globals.py  preprocessor.py
MLOSSP/src/mlossp/formatters/: __init__.py  formatters.py
Models/: arima.py  evaluation.py  gnn_models.py  lstm.py  plotting.py  random_forest.py  results.txt  sri_lanka_adj_list.json
(+18 files in other folders)
