[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlossp"
version = "2.2.0"
authors = [
  { name="TripIe" },
]
description = "A package to spatially join and concatenate Satellite data into time series."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dask==2024.1.1",
    "geopandas==0.14.2",
    "h5netcdf==1.3.0",
    "netCDF4==1.6.5",
    "numpy==1.26.2",
    "pandas==2.2.0",
    "xarray==2024.1.1",
    "netcdf==66.0.2",
    "pyarrow==15.0.0",
    "pyogrio==0.7.2",
    "rasterio==1.3.9",
    "geopy==2.4.1",
    "tqdm==4.66.1"
]




